--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,11 @@
 <input type="text" id="infoHash">
 <button id="download">Download</button>
 <p id="log"></p>
-<input type="file" id="file">
+File :
+<input type="file" id="file" multiple>
+<br>
+Folder : 
+<input type="file" id="folder" webkitdirectory multiple>
 <div class="file"></div>
 <h2>Download Links</h2>
 <div id="links"></div>
